--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.pt filter=lfs diff=lfs merge=lfs -text
+Flask[[:space:]]Deployed[[:space:]]App/large_model.pt filter=lfs diff=lfs merge=lfs -text
+Flask[[:space:]]Deployed[[:space:]]App/plant_disease_model_1_latest.pt filter=lfs diff=lfs merge=lfs -text
