--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,23 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "app.py",
-        "use": "@vercel/python"
-      },
-      {
-        "src": "static/**/*",
-        "use": "@vercel/static"
-      },
-      {
-        "src": "templates/**/*",
-        "use": "@vercel/static"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "app.py"
-      }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    {
+      "src": "Flask Deployed App/app.py",
+      "use": "@vercel/python"
+    },
+    {
+      "src": "Flask Deployed App/static/**/*",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "Flask Deployed App/templates/**/*",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "Flask Deployed App/app.py"
+    }
+  ]
+}
